[gd_scene load_steps=2 format=3 uid="uid://d1mvmj1ot53a8"]

[ext_resource type="Script" uid="uid://b2yt22ty6ka68" path="res://Scripts/gui.gd" id="1_gr1fv"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gr1fv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = 6.0
offset_right = -7.0
offset_bottom = 56.0
grow_horizontal = 0

[node name="LabelPontos" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Pontos:"
horizontal_alignment = 2

[node name="LabelTempo" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Tempo:"
horizontal_alignment = 2

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
